components/operatorv2/config/samples/formance_v1beta1_gateway.yaml
apiVersion: formance.com/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: gateway
    app.kubernetes.io/instance: gateway-sample
    app.kubernetes.io/part-of: operatorv2
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: operatorv2
  name: gateway0
spec:
  stack: stack0
  ingress:
    host: testing.formance.dev
    scheme: https
